[metadata]
# replace with your username:
name = ai-privacy-toolkit
version = 0.0.3
author = Abigail Goldsteen
author_email = abigailt@il.ibm.com
description = A toolkit for tools and techniques related to the privacy and compliance of AI models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/ai-privacy-toolkit
project_urls =
    Documentation = https://ai-privacy-toolkit.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests